# Copyright (C) Nitrokey GmbH
# SPDX-License-Identifier: CC0-1.0

[workspace]
members = [
  "extensions/chunked",
  "extensions/fs-info",
  "extensions/hkdf",
  "extensions/hpke",
  "extensions/manage",
  "extensions/wrap-key-to-file",
]

[workspace.package]
authors = ["Nitrokey GmbH <info@nitrokey.com>"]
edition = "2021"
repository = "https://github.com/trussed-dev/trussed-staging"
license = "Apache-2.0 OR MIT"

[workspace.dependencies]
littlefs2-core = "0.1"
serde = { version = "1.0.160", default-features = false, features = ["derive"] }
serde-byte-array = "0.1.2"
trussed-core = { version = "0.1.0", features = ["serde-extensions"] }

[package]
name = "trussed-staging"
version = "0.3.2"
description = "Work in progress trussed features"
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
littlefs2-core.workspace = true
serde.workspace = true
serde-byte-array.workspace = true

chacha20poly1305 = { version = "0.10", default-features = false, features = ["heapless", "reduced-round"], optional = true }
delog = "0.1.6"
hkdf = { version = "0.12", optional = true }
rand_core = { version = "0.6.4", default-features = false }
sha2 = { version = "0.10", default-features = false, optional = true }
salty = { version = "0.3.0", default-features = false }
trussed = { version = "0.1.0", default-features = false, features = ["serde-extensions"] }
digest = { version = "0.10.7", default-features = false }
hex-literal = { version = "0.4.0", optional = true }
aead = { version = "0.5.2", optional = true, default-features = false }

trussed-chunked = { version = "0.2.0", optional = true }
trussed-hkdf = { version = "0.3.0", optional = true }
trussed-hpke = { version = "0.2.0", optional = true }
trussed-manage = { version = "0.2.0", optional = true }
trussed-wrap-key-to-file = { version = "0.2.0", optional = true }
trussed-fs-info = { version = "0.2.0", optional = true } 

[dev-dependencies]
hex-literal = "0.4.0"
hmac = "0.12.0"
trussed = { version = "0.1.0", default-features = false, features = ["aes256-cbc", "crypto-client", "filesystem-client", "hmac-sha256", "virt", "x255"] }

[features]
default = []

chunked = ["trussed-chunked", "chacha20poly1305/stream"]
hkdf = ["trussed-hkdf", "dep:hkdf", "dep:sha2"]
hpke = ["trussed-hpke", "dep:hkdf", "dep:sha2", "dep:hex-literal", "dep:aead", "dep:chacha20poly1305"]
manage = ["trussed-manage"]
wrap-key-to-file = ["dep:chacha20poly1305", "trussed-wrap-key-to-file", "trussed/chacha8-poly1305"]
fs-info = ["trussed-fs-info"]

virt = ["std", "trussed/virt"]
std = []

# used for delog
log-all = []
log-none = []
log-trace = []
log-info = []
log-debug = []
log-warn = []
log-error = []

[patch.crates-io]
# trussed = { git = "https://github.com/trussed-dev/trussed.git", rev = "ac106d63ab5e19021b0e37f0efb4313f8168a110" }
trussed = { git = "https://github.com/trussed-dev/trussed.git", rev = "refs/pull/207/head" }

trussed-chunked = { path = "extensions/chunked" }
trussed-hkdf = { path = "extensions/hkdf" }
trussed-hpke = { path = "extensions/hpke" }
trussed-manage = { path = "extensions/manage" }
trussed-wrap-key-to-file = { path = "extensions/wrap-key-to-file" }
trussed-fs-info= { path = "extensions/fs-info" }
