# Copyright (C) Nitrokey GmbH
# SPDX-License-Identifier: CC0-1.0

[package]
name = "trussed-chunked"
version = "0.2.0"
description = "extension with chunked file operations for trussed"
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde-byte-array.workspace = true
trussed-core = { workspace = true, features = ["filesystem-client"] }
