# Copyright (C) Nitrokey GmbH
# SPDX-License-Identifier: CC0-1.0

[package]
name = "trussed-manage"
version = "0.2.0"
description = "management extension for trussed"
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
littlefs2-core.workspace = true
serde.workspace = true
trussed-core.workspace = true
