# Copyright (C) Nitrokey GmbH
# SPDX-License-Identifier: CC0-1.0

[package]
name = "trussed-wrap-key-to-file"
version = "0.2.0"
description = "extension for wrapping large keys to the filesystem with trussed"
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
trussed-core = { workspace = true, features = ["filesystem-client"] }
